# AutoRun

./: .gitignore  README.md  pyproject.toml  tasks.json
src/: config.py  main.py  tasks.py
src/clients/: feishu_client.py  gitlab_client.py
src/core/: runner.py  task.py
src/utils/: git_helper.py
src/validators/: __init__.py  base.py  ce_validator.py  hdr_validator.py  jdd_validator.py
