[project]
name = "autorun"
version = "0.1.0"
description = "A Python project integrated with Feishu and GitLab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lark-oapi>=1.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
